apps/transmission/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      volumes:
      - name: yasr-volume
        persistentVolumeClaim:
          claimName: yasr-volume
      - name: dev-tun
        hostPath:
          path: /dev/net/tun
          type: CharDevice
      - name: tz-config
        hostPath:
          path: /etc/localtime
      dnsPolicy: ClusterFirst
      dnsConfig:
        {}
      containers:
      # VPN
      - name: vpn
        image: docker.io/qmcgaw/gluetun:v3.32.0
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - '[ "$(curl -s https://ifconfig.co/city)" != "${VPN_CITY}" ]'
          initialDelaySeconds: 45
          periodSeconds: 60
          failureThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "1500Mi"
        volumeMounts:
        - mountPath: /vpn
          name: yasr-volume
          subPath: configs/openvpn/
        - name: dev-tun
          mountPath: /dev/net/tun
        - name: yasr-volume
          mountPath: /tmp/gluetun/
          subPath: configs/openvpn/
      # Transmission port forward
      - name: transmission-pia-port-forward
        image: docker.io/gandazgul/transmission-pia-port-forward:v0150413
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /data
          name: yasr-volume
          subPath: configs/openvpn/
        - mountPath: /etc/localtime
          name: tz-config
          readOnly: true
      # Transmission
      - name: transmission
        image: docker.io/linuxserver/transmission:amd64-latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - '[ "$(curl -s https://ifconfig.co/city)" != "${VPN_CITY}" ]'
          initialDelaySeconds: 45
          periodSeconds: 60
          failureThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: /data
          name: yasr-volume
          subPath: configs/transmission
        - mountPath: /config
          name: yasr-volume
          subPath: configs/transmission
        - mountPath: /watch
          name: yasr-volume
          subPath: configs/transmission/watch
        - mountPath: /etc/localtime
          name: tz-config
          readOnly: true
        ports:
        - name: trs-http
          containerPort: 9091
          protocol: TCP
