apps/transmission/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  ports:
  - name: trs-http
    port: 9091
    protocol: TCP
    targetPort: trs-http
