apps/transmission/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
  labels:
    app.kubernetes.io/name: transmission
  annotations:
    nginx.ingress.kubernetes.io/app-root: /transmission/web/
    forecastle.stakater.com/appName: "Transmission"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://transmissionbt.com/assets/images/Transmission_icon.png"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - transmission.${CLUSTER_DOMAIN_NAME}
    secretName: internal-ingress-cert
  rules:
  - host: transmission.${CLUSTER_DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: trs-http
